// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemImage > should match snapshot with size 64 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <img
        alt=""
        class="rounded-md"
        data-nimg="1"
        decoding="async"
        height="64"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d000048515fdcfafcc8e7831c5fe2c618&w=128&q=75"
        srcset="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d000048515fdcfafcc8e7831c5fe2c618&w=64&q=75 1x, /_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d000048515fdcfafcc8e7831c5fe2c618&w=128&q=75 2x"
        style="color: transparent; min-height: 64px; max-height: 64px; min-width: 64px; max-width: 64px; object-fit: cover;"
        width="64"
      />
    </div>
  </body>,
  "container": <div>
    <img
      alt=""
      class="rounded-md"
      data-nimg="1"
      decoding="async"
      height="64"
      loading="lazy"
      src="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d000048515fdcfafcc8e7831c5fe2c618&w=128&q=75"
      srcset="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d000048515fdcfafcc8e7831c5fe2c618&w=64&q=75 1x, /_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d000048515fdcfafcc8e7831c5fe2c618&w=128&q=75 2x"
      style="color: transparent; min-height: 64px; max-height: 64px; min-width: 64px; max-width: 64px; object-fit: cover;"
      width="64"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemImage > should match snapshot with size 300 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <img
        alt=""
        class="rounded-md"
        data-nimg="1"
        decoding="async"
        height="300"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d00001e025fdcfafcc8e7831c5fe2c618&w=640&q=75"
        srcset="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d00001e025fdcfafcc8e7831c5fe2c618&w=384&q=75 1x, /_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d00001e025fdcfafcc8e7831c5fe2c618&w=640&q=75 2x"
        style="color: transparent; min-height: 300px; max-height: 300px; min-width: 300px; max-width: 300px; object-fit: cover;"
        width="300"
      />
    </div>
  </body>,
  "container": <div>
    <img
      alt=""
      class="rounded-md"
      data-nimg="1"
      decoding="async"
      height="300"
      loading="lazy"
      src="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d00001e025fdcfafcc8e7831c5fe2c618&w=640&q=75"
      srcset="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d00001e025fdcfafcc8e7831c5fe2c618&w=384&q=75 1x, /_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d00001e025fdcfafcc8e7831c5fe2c618&w=640&q=75 2x"
      style="color: transparent; min-height: 300px; max-height: 300px; min-width: 300px; max-width: 300px; object-fit: cover;"
      width="300"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemImage > should match snapshot with size 640 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <img
        alt=""
        class="rounded-md"
        data-nimg="1"
        decoding="async"
        height="640"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d0000b2735fdcfafcc8e7831c5fe2c618&w=1920&q=75"
        srcset="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d0000b2735fdcfafcc8e7831c5fe2c618&w=640&q=75 1x, /_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d0000b2735fdcfafcc8e7831c5fe2c618&w=1920&q=75 2x"
        style="color: transparent; min-height: 640px; max-height: 640px; min-width: 640px; max-width: 640px; object-fit: cover;"
        width="640"
      />
    </div>
  </body>,
  "container": <div>
    <img
      alt=""
      class="rounded-md"
      data-nimg="1"
      decoding="async"
      height="640"
      loading="lazy"
      src="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d0000b2735fdcfafcc8e7831c5fe2c618&w=1920&q=75"
      srcset="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d0000b2735fdcfafcc8e7831c5fe2c618&w=640&q=75 1x, /_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d0000b2735fdcfafcc8e7831c5fe2c618&w=1920&q=75 2x"
      style="color: transparent; min-height: 640px; max-height: 640px; min-width: 640px; max-width: 640px; object-fit: cover;"
      width="640"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
